<resources>
    <string name="app_name">U-Business</string>
    <string name="sign_up">Записаться</string>
    <string name="dummy_text">С другой стороны новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития.

Разнообразный и богатый опыт рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров.

Повседневная практика показывает, что консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Повседневная практика показывает, что сложившаяся структура организации требуют определения и уточнения модели развития. Задача организации, в особенности же постоянное.</string>
    <string name="more">подробнее</string>
    <string name="own_data">ЛИЧНЫЕ ДАННЫЕ</string>
    <string name="name_caps">ИМЯ</string>
    <string name="e_mail_caps">E-MAIL</string>
    <string name="phone_caps">ТЕЛЕФОН</string>
    <string name="language_caps">ЯЗЫК</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="subscription_management">Управление подпиской</string>
    <string name="subscription_prolong">Продлить</string>
    <string name="subscription_edit">Изменить</string>
    <string name="subscription_cancel">отменить подписку</string>
    <string name="business_card_edit">Изменить</string>
    <string name="business_card_industry">Индустрия</string>
    <string name="business_card_company_name">Название компании</string>
    <string name="business_card_more">подробнее</string>
    <string name="business_card_roll_up">свернуть</string>
    <string name="business_card_phone">Телефон</string>
    <string name="business_card_country">Страна</string>
    <string name="business_card_address">Адрес</string>
    <string name="business_card_tags">Тэги</string>
    <string name="business_card_save">Сохранить</string>
    <string name="sign_in_1_text">Принимайте участие <br />в закрытых встречах</string>
    <string name="sign_in_1_sign_up">Зарегистрироваться</string>
    <string name="sign_in_1_sign_in">Войти</string>
    <string name="sign_in_1_btn_facebook">Facebook</string>
    <string name="sign_in_1_btn_google">Google</string>
    <string name="sign_in_2_back">Back</string>
    <string name="sign_in_2_text">Вход</string>
    <string name="sign_in_2_mail">E-Mail</string>
    <string name="sign_in_2_password">Пароль</string>
    <string name="sign_in_2_forgot_password"><u>Забыли пароль?</u></string>
    <string name="sign_in_2_sign_in">Войти</string>
    <string name="sign_up_1_text">Регистрация</string>
    <string name="sign_up_1_back">Back</string>
    <string name="sign_up_1_name">Имя</string>
    <string name="sign_up_1_mail">E-Mail</string>
    <string name="sign_up_1_continue">Продолжить</string>
    <string name="sign_up_2_text">Регистрация</string>
    <string name="sign_up_2_back">Back</string>
    <string name="sign_up_2_password">Пароль</string>
    <string name="sign_up_2_repeat_password">Потвердите пароль</string>
    <string name="sign_up_2_sign_up">Зарегистрироваться</string>
    <string name="forgot_password_back">Back</string>
    <string name="forgot_password_text">Восстановление доступа</string>
    <string name="forgot_password_mail">E-Mail</string>
    <string name="is_waiting_text">В ожидании оплаты</string>
    <string name="is_waiting_subtext">Ваш аккаунт в ожидании оплаты.<br />
        После подтверждения статуса платежа,<br />
        вы сможете начать пользоваться приложением!</string>
    <string name="specialOffers_actual">актуальные</string>
    <string name="specialOffers_overdue">просроченные</string>
    <string name="edit_offer_name">Название</string>
    <string name="edit_offer_protocol">Протокол</string>
    <string name="edit_offer_validity">Срок действия</string>
    <string name="edit_offer_desc">Описания</string>
    <string name="edit_offer_save">Сохранить</string>
    <string name="create_offer_name">Название</string>
    <string name="create_offer_protocol">Протокол</string>
    <string name="create_offer_validity">Срок действия</string>
    <string name="create_offer_desc">Описание</string>
    <string name="item_news_more">Подробнее ></string>
    <string name="home_events"><a href="">События</a></string>
    <string name="home_register">Зарегистрироваться</string>
    <string name="home_news"><a href="">Новости</a></string>
    <string name="news_special_offers"><a href="">Специальные предложения</a></string>
    <string name="home_test_link_text">Участников U пригласили изучить воздействия эфирных масел и релаксирующих программ на психофизиологическое состояние человека! Цель исследования – понять, как ароматерапия помогает человеку расслабиться и снизить стресс. <a href="http://www.google.com">Читать еще ></a></string>
    <string name="item_event_more_show_more">Смотреть ещё</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="menu_business_cards">ВИЗИТКИ</string>
    <string name="menu_calendar">КАЛЕНДАРЬ МЕРОПРИЯТИЙ</string>
    <string name="menu_special_offers">СПЕЦ. ПРЕДЛОЖЕНИЯ</string>
    <string name="menu_news">НОВОСТИ</string>
    <string name="menu_library">БИБЛИОТЕКА</string>
    <string name="menu_gallery">ФОТОПЛЁНКА</string>
    <string name="menu_about_us">О НАС</string>
    <string name="menu_connect_with_us">СВЯЗАТЬСЯ С НАМИ</string>
    <string name="menu_home">ГЛАВНАЯ СТРАНИЦА</string>

    <string name="library_title">Библиотека</string>
    <string name="library_last">последние</string>
    <string name="library_fav">избранное</string>
    <string name="folder_documents">Документы</string>
    <string name="folder_photos">Фото</string>
    <string name="folder_videos">Видео</string>
    <string name="folder_recordings">Аудио</string>
    <string name="gallery_title">Галерея</string>
    <string name="editPassword_title">Галерея</string>
    <string name="edit_password_old_password">Старый пароль</string>
    <string name="edit_password_new_password">Новый пароль</string>
    <string name="edit_password_confirm_password">Подтвердите пароль</string>
    <string name="edit_password_save">Сохранить</string>
    <string name="edit_phone_number">Номер телефона</string>
    <string name="edit_phone_confirmation">Подтверждение номера</string>
    <string name="edit_phone_input_code">Введите код подтверждения</string>
    <string name="edit_phone_continue">Продолжить</string>
    <string name="edit_phone_confirm">Подтвердить</string>
    <string name="edit_phone_code">Код подтверждения</string>

    <string name="profile_account">мой кабинет</string>
    <string name="profile_business_card">моя визитка</string>
    <string name="profile_special_offers">мои спец. предложения</string>
    <string name="news_search">Поиск</string>

    <!-- Auth/Reg Strings -->
    <string name="alert_title_name_email">Пустые строки</string>
    <string name="alert_message_empty_name_email_message">Не введен Email или Имя</string>
    <string name="alert_title_password_not_equals">Пароль не совпадает</string>
    <string name="alert_message_password_not_equals">Пароль не совпадает</string>
    <string name="alert_title_not_valid_email">Email некорректен</string>
    <string name="alert_message_not_valid_email">Некорректно введен Email</string>
    <string name="status_validate_text">Подтвержден</string>
    <string name="satus_invalidate_text">Не Подтвержден</string>
    <string name="title_alert_show_empty_fields">Заполните поля</string>
    <string name="event_list">Мероприятия</string>
    <string name="server_unavailable">Сервер не доступен</string>
    <string name="error">Errr</string>
    <string name="business_cards_header_title">Визитки</string>
    <string name="chip_checkable_all_text">Все</string>
    <string name="chip_checkable_chosen_text">Избранное</string>
    <string name="button_add_favorite">Добавить контакты</string>
</resources>