<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bridal_heath"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/base_title_style"
                android:text="@string/editPassword_title" />

            <EditText
                android:id="@+id/editPassword_oldPassword_et"
                style="@style/base_text_field_style"
                android:layout_marginTop="50dp"
                android:hint="@string/edit_password_old_password" />

            <EditText
                android:id="@+id/editPassword_newPassword_et"
                style="@style/base_text_field_style"
                android:hint="@string/edit_password_new_password" />

            <EditText
                android:id="@+id/editPassword_confirmPassword_et"
                style="@style/base_text_field_style"
                android:hint="@string/edit_password_confirm_password" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editPassword_save_btn"
            style="@style/base_button_style"
            android:layout_marginBottom="32dp"
            android:text="@string/edit_password_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>