<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/constraint">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_stroke_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/forgot_password_back" />

        <TextView
            android:id="@+id/text_view"
            style="@style/main_text_style"
            android:text="@string/forgot_password_text"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edit_text_mail"
            style="@style/input_text_style"
            android:hint="@string/forgot_password_mail"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/black_rounded_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="80dp"
            android:text="@string/sign_up_2_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view"
            app:layout_constraintStart_toStartOf="@+id/text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>